attempting to fix color clipping that occurs at the bottom of the page.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: #659DBD;
+  min-height: 100vh;
 }
 
 .App-logo {
